--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ main {
 }
 
 #newsletter {
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: transparent;
     padding: 20px;
     text-align: center;
     color: white;
