--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ header {
     color: rgb(252, 253, 253);
     position: relative; /* Fixes the header at the top */
     text-align: center;
-
 }
 
 nav {
@@ -57,7 +56,6 @@ nav ul li a:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-
 main {
     width: 100%;
     max-width: 600px;
@@ -68,29 +66,25 @@ main {
     box-shadow: 0 0 10px rgba(62, 10, 10, 0.1);
 }
 
-
-
 #recipe-list {
     margin-top: 0;
-
 }
 
-#recipes{
+#recipes {
     list-style: none;
     padding: 0;
 }
 
-#recipes li{
+#recipes li {
     margin-bottom: 10px;
 }
 
-#recipe li a{
+#recipes li a {
     color: white;
     text-decoration: none;
-
 }
 
-#recipe li a:hover{
+#recipes li a:hover {
     text-decoration: underline;
     background-color: #fbfafb;
 }
@@ -145,9 +139,7 @@ main {
     background-color: #0056b3;
 }
 
-
 footer {
-
     color: white;
     padding: 10px 0;
     text-align: center;
