--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ body {
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat;
-    height: 900px;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
 }
 
 header {
@@ -144,4 +144,5 @@ footer {
     padding: 10px 0;
     text-align: center;
     width: 100%;
+    position: relative;
 }
