--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,26 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     
 }
 
 header {
     width: 100%;
-    color: rgb(252, 253, 253);
+    color: rgb(244, 248, 248);
     position: relative;
     text-align: center;
+}
+
+
+.hero-content input[type="text"] {
+    padding: 5px;
+    font-size: 0.8em;
+    margin-top: 20px;
+    border: none;
+    border-radius: 25px;
+    width: 100%;
+    max-width: 300px;
 }
 
 nav {
@@ -116,7 +127,7 @@ main {
 }
 
 #subscribe-form input {
-    padding: 15px;
+    padding: 10px;
     font-size: 1em;
     border-radius: 25px;
     border: none;
@@ -126,7 +137,7 @@ main {
 }
 
 #subscribe-form button {
-    padding: 15px 30px;
+    padding: 10px 20px;
     font-size: 1em;
     cursor: pointer;
     background-color: #007BFF;
@@ -139,10 +150,12 @@ main {
     background-color: #0056b3;
 }
 
-footer {
+#footer {
     color: white;
-    padding: 10px 0;
+    background-color: transparent;
+    padding: 15px 0;
     text-align: center;
     width: 100%;
     position: relative;
+
 }
