--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,16 @@ nav ul li a:hover {
 }
 
 main {
+    flex: 1; /* Ensures main content area grows to take up space */
     width: 100%;
     max-width: 600px;
-    margin: 20px auto;
+    margin: 0 auto;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(62, 10, 10, 0.1);
+    margin-top: 150px; /* Adjust this value to create space between header and main content */
+    overflow-y: auto; /* Allows main content to be scrollable */
 }
 
 #recipe-list {
@@ -97,7 +100,6 @@ main {
 
 #recipes li a:hover {
     text-decoration: underline;
-    background-color: #fbfafb;
 }
 
 #newsletter {
@@ -156,6 +158,6 @@ main {
     padding: 15px 0;
     text-align: center;
     width: 100%;
-    position: relative;
+    
 
 }
