--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ nav {
     position: absolute;
     right: 20px;
     top: 20px;
+    z-index: 100;
 }
 
 nav ul {
@@ -68,16 +69,15 @@ nav ul li a:hover {
 }
 
 main {
-    flex: 1; /* Ensures main content area grows to take up space */
+    flex: 1; /* Allows main to expand and push footer down */
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 100px auto 20px auto; /* Adjust top margin to account for the header */
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(62, 10, 10, 0.1);
-    margin-top: 150px; /* Adjust this value to create space between header and main content */
-    overflow-y: auto; /* Allows main content to be scrollable */
+    
 }
 
 #recipe-list {
@@ -100,6 +100,7 @@ main {
 
 #recipes li a:hover {
     text-decoration: underline;
+    background-color: #fbfafb;
 }
 
 #newsletter {
@@ -110,10 +111,12 @@ main {
     margin: 20px auto;
     border-radius: 10px;
     max-width: 600px;
+
 }
 
 #newsletter h2 {
     margin-bottom: 20px;
+    
 }
 
 #subscribe-form {
@@ -158,6 +161,6 @@ main {
     padding: 15px 0;
     text-align: center;
     width: 100%;
-    
+    position: relative;
 
 }
