--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,13 @@ main {
     flex: 1; /* Allows main to expand and push footer down */
     width: 100%;
     max-width: 600px;
-    margin: 100px auto 20px auto; /* Adjust top margin to account for the header */
+    margin:  auto; /* Adjust top margin to account for the header */
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(62, 10, 10, 0.1);
+    margin-top: 150px; /* Adjust this value to create space between header and main content */
+    overflow-y: auto; /* Allows main content to be scrollable */
 }
 
 #recipe-list {
